operation on origins not working correct/ let blender crash #66605

Closed
opened 2019-07-09 13:41:20 +02:00 by Andre Bredeweg · 13 comments

System Information
Operating system: win10
Graphics card: GeForce GTX 1060 6GB

Blender Version
Broken: blender-2.80.0-git.ac8c795429f9-windows64
Worked: blender-2.80.0-git.c13e10a7404d-windows64

Selecting multiple objects and performing "origin to cursor", results in 1 object keeping its location or blender just crashes

Add multiple objects (meshes, curves)
Select all objects-> Object->Set origin->origin to 3d cursor

result: one of the objects still has its origin intact.

sometimes blender just crashes when doing this multiple times.

before.png

operation.png

after.png

**System Information** Operating system: win10 Graphics card: GeForce GTX 1060 6GB **Blender Version** Broken: blender-2.80.0-git.ac8c795429f9-windows64 Worked: blender-2.80.0-git.c13e10a7404d-windows64 Selecting multiple objects and performing "origin to cursor", results in 1 object keeping its location or blender just crashes Add multiple objects (meshes, curves) Select all objects-> Object->Set origin->origin to 3d cursor result: one of the objects still has its origin intact. sometimes blender just crashes when doing this multiple times. ![before.png](https://archive.blender.org/developer/F7578936/before.png) ![operation.png](https://archive.blender.org/developer/F7578935/operation.png) ![after.png](https://archive.blender.org/developer/F7578937/after.png)
Author

Added subscriber: @dre-1

Added subscriber: @dre-1
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cant get it to crash, but issue with one origin left intact confirmed, checking... [not caused by 4ca054617b though...]

Cant get it to crash, but issue with one origin left intact confirmed, checking... [not caused by 4ca054617b though...]

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

I can get it to crash when changing the "Set Origin" operator parameters in the redo panel.

I can get it to crash when changing the "Set Origin" operator parameters in the redo panel.
Philipp Oeser self-assigned this 2019-07-09 14:30:47 +02:00
Member

OK, crash confirmed on redo, I'll see what I can do...

OK, crash confirmed on redo, I'll see what I can do...
Member

crash is due to d6ebd04bb3

crash is due to d6ebd04bb3
Member

crash on redo should be fixed by D5209, looking into issue with one origin left intact now...

crash on redo should be fixed by [D5209](https://archive.blender.org/developer/D5209), looking into issue with one origin left intact now...
Member

the remaining issue is caused by the mem-rotation from 1699de17bd I think, gotta run now, will check later again...

/* move active first */
if (ob == obact) {
  memmove(&objects[1], objects, object_index);
  objects[0] = ob;
}
the remaining issue is caused by the mem-rotation from 1699de17bd I think, gotta run now, will check later again... ``` /* move active first */ if (ob == obact) { memmove(&objects[1], objects, object_index); objects[0] = ob; } ```

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht

CC @sergey.

CC @sergey.

This issue was referenced by 23f1bc7414

This issue was referenced by 23f1bc741496c9ce7da6bef9af39ba0728286525

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66605
No description provided.